--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -1357,6 +1357,14 @@ invalid it has a mnemonic value of None. </li>
 None
 <h3> EVENT-TRIGGERED BEHAVIORS: </h3>
 <br>
+<ul>
+    <li>8.1 &nbsp; If HallCall[f,b,d] is received as Pressed, then, </li>
+    <ul>
+        <li> 8.1a &nbsp;HallLight[f,b,d] shall be set to on.</li>
+        <li> 8.1b &nbsp;mHallCall[f,b,d] shall be set to true.</li>
+    </ul>
+    <li>8.2 &nbsp; If mAtFloor[f, b] is received as true, then HallLight[f,b,d] shall be set to off.</li>
+</ul>
 <h2><a name="carbuttoncontrol"></a> 9. CarButtonControl[f, b] </h2>
 <h3> Replication: </h3>
 <ul>
