--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -1278,7 +1278,14 @@ shall not be commanded to {Slow, d} or {Fast, d}until the car is no
 longer
 overloaded.
 <h3> EVENT-TRIGGERED BEHAVIORS: </h3>
-<br>
+6.6&nbsp;&nbsp;&nbsp; If mDesiredFloor[<b>f</b>, <b>b</b>, <b>d</b>] is received, then: <br>
+&nbsp;&nbsp;&nbsp; 6.6.1&nbsp; Drive shall be set to <b>f</b> and <b>d</b>; <br>
+&nbsp;&nbsp;&nbsp; 6.6.2&nbsp; mDrive shall be set to <b>s</b> and <b>d</b>; <br>
+&nbsp;&nbsp;&nbsp; 6.6.3&nbsp; DesiredDirection is set to <b>d</b>; <br>
+&nbsp;&nbsp;&nbsp; 6.6.4&nbsp; CommitPoint[f] is set to <b>NotReached</b>. <br>
+6.7&nbsp;&nbsp;&nbsp; If mAtFloor[<b>f</b>, <b>b</b>] is received True, then: <br>
+&nbsp;&nbsp;&nbsp; 6.7.1&nbsp; Drive shall be set to <b>STOP</b>. <br>
+&nbsp;&nbsp;&nbsp; 6.7.2&nbsp; CommitPoint[<b>f</b>] is set to <b>NotReached</b>. <br>
 <h2><a name="lanterncontrol"></a> 7. LanternControl[d] </h2>
 <h3> Replication: </h3>
 <ul>
