--- a/portfolio/portfolio/scen_sd/scen_sd.html
+++ b/portfolio/portfolio/scen_sd/scen_sd.html
@@ -170,12 +170,12 @@ b</b> might or might not be equal to <b>c</b>. </li>
   <li>Door[<b>b</b>,<b>r</b>] starts closing. </li>
   <li>Passenger presses button CarCall[<b>g</b>,<b>c</b>].</li>
   <li>CarLight[<b>g</b>,<b>c</b>] lights up. </li>
-  <li>Doors complete closing. </li>
+  <li>mCarWeight is bigger than MaxCarCapacity and cardoor reopen. </li>
 </ol>
 <h3> Post-Conditions: </h3>
 <ul type="disc">
   <li>Elevator is at the passenger's floor. </li>
-  <li>All doors are closed. </li>
+  <li>All doors are opening. </li>
   <li>Car button light for passenger's desired floor is on. </li>
 </ul>
 <h3> Sequence Diagram: </h3>
