issue log&table of content

--- a/portfolio/portfolio/portfolio.html
+++ b/portfolio/portfolio/portfolio.html
@@ -40,15 +40,16 @@ required for the various controllers.<br>
     </li>
     <li><a href="reqs/requirements2.html">Requirements II - Distributed
 Controller Requirements</a> -
-&lt;description here&gt;</li>
+Detailed specifications for the all controllers in the system.</li>
   </ul>
   <li>Traceability</li>
   <ul>
     <li><a href="traceability/sd_req_traceability.xls">Sequence
-Diagrams to Requirements Traceability</a> -
-&lt;description here&gt;</li>
+Diagrams to Requirements Traceability</a> - forward and backward traceability 
+from sequence diagrams to event triggered requirements from Proj 2</li>
     <li><a href="traceability/req_const_traceability.html">Requirements
-to Contstraints Traceability</a> - &lt;description here&gt;</li>
+to Contstraints Traceability</a> - Trace an object to its own constraints and 
+verify that its Requirements support or don't contradict to those constraints</li>
     <li><a href="traceability/sc_code.html">Statecharts to Code
 Traceability</a> -
 &lt;description here&gt;</li>
