--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -68,7 +68,7 @@ open<br>
     <tr>
       <td style="vertical-align: top;"><span style="font-weight: bold;">DoorControl
 -
-Completed by (Name, andrewid)</span><br>
+Completed by (Xianle Wang, xianlew)</span><br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
@@ -92,7 +92,7 @@ Completed by (Name, andrewid)</span><br>
       </td>
       <td style="vertical-align: top;">X<br>
       </td>
-      <td>~<br>
+      <td style="vertical-align: top;">~<br>
       </td>
     </tr>
     <tr>
@@ -113,100 +113,100 @@ countdown<br>
     <tr>
       <td>5.7.1 door open --&gt; stop door<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td><br>
+      <td style="vertical-align: top;">X<br>
       </td>
     </tr>
     <tr>
       <td style="vertical-align: top;">5.7.2 door open --&gt; decrement
 Counter<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
     </tr>
     <tr>
       <td>5.8 door close --&gt; stop door<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td><br>
+      <td style="vertical-align: top;">~<br>
       </td>
     </tr>
     <tr>
       <td>5.9 countdown expired --&gt; nudge door<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td><br>
+      <td style="vertical-align: top;">~<br>
       </td>
     </tr>
     <tr>
       <td>5.10 overweight --&gt; reopen<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">X<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td><br>
+      <td style="vertical-align: top;">X<br>
       </td>
     </tr>
     <tr>
       <td> 5.11 Set dwell<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td><br>
+      <td style="vertical-align: top;">~<br>
       </td>
     </tr>
     <tr>
       <td> 5.12 Set mDoorMotor<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">~<br>
       </td>
-      <td><br>
+      <td style="vertical-align: top;">~<br>
       </td>
     </tr>
     <tr>
