--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -297,7 +297,7 @@ time<br>
     </tr>
     <tr>
       <td style="vertical-align: top;"><span style="font-weight: bold;">LanternControl</span><span
- style="font-weight: bold;"> - Completed by (Name, andrewid)</span> </td>
+ style="font-weight: bold;"> - Completed by (Qiang Zhang, qiangz)</span> </td>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"><br>
@@ -310,8 +310,8 @@ time<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">7.2 (add requirement summary) </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">7.2 Door Closed --> Lantern Off</td>
+      <td style="vertical-align: top;">~<br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
@@ -323,9 +323,9 @@ time<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;">...<br>
+      <td style="vertical-align: top;">7.3 Door Open, Direction UP -> Lantern UP On<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"> X <br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
@@ -337,9 +337,9 @@ time<br>
       </td>
     </tr>
     <tr>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;">7.4 Door Open, Direction Down -> Lantern Down On<br>
       </td>
-      <td style="vertical-align: top;"><br>
+      <td style="vertical-align: top;"> X <br>
       </td>
       <td style="vertical-align: top;"><br>
       </td>
@@ -362,20 +362,6 @@ time<br>
       <td style="vertical-align: top;"><br>
       </td>
       <td style="vertical-align: top;"> <br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
-      </td>
-      <td style="vertical-align: top;"><br>
       </td>
     </tr>
     <tr>
