--- a/portfolio/portfolio/traceability/req_const_traceability.html
+++ b/portfolio/portfolio/traceability/req_const_traceability.html
@@ -13,8 +13,12 @@
 </h1>
 </center>
 <hr style="width: 100%; height: 2px;">
-<div style="text-align: left;"> 18649 &lt;semester&gt;<br>
-Group x - Student names and andrewIds
+<div style="text-align: left;"> 18649 Fall 2013<br>
+    Group 17: <br>
+    Xianle Wang/xianlew <br>
+    Shen Yu/sheny <br>
+    Qiang Zhang/qiangz<br>
+    Jiang He/jiangh<br>
 </div>
 <hr style="width: 100%; height: 2px;"></center>
 <p>This table maintains traceability between the requirements
