--- a/portfolio/portfolio/reqs/requirements2.html
+++ b/portfolio/portfolio/reqs/requirements2.html
@@ -1638,6 +1638,7 @@
         <ul>
             <li>Target: an integer Floor number for desired Floor, initialized to
                 Lobby = 1. </li>
+            <li>DesiredHallway: {FRONT, BACK, BOTH} base on the value of mAtFloor.b where mAtFloor.f equals Target. </li>
         </ul>
         <h3> CONSTRAINTS: </h3>
         11.1&nbsp;&nbsp;&nbsp; Target shall be a valid Floor number from 1 ..
@@ -1647,27 +1648,192 @@
         11.3&nbsp;&nbsp;&nbsp; The desired direction d of mDesiredFloor(f, b,
         d) shall not be Down when f = 1.
         <h3> TIME-TRIGGERED BEHAVIORS: </h3>
-        11.4&nbsp;&nbsp;&nbsp; mDesiredFloor.f shall always be set to Target.<br>
-        11.5&nbsp;&nbsp;&nbsp; mDesiredFloor.d shall always be set to Stop.<br>
-        11.6&nbsp;&nbsp;&nbsp; Whenever any mDoorClosed [b, r] is False, then<br>
-        &nbsp;&nbsp; 11.6.1&nbsp; Target
+        R11.4&nbsp;&nbsp;&nbsp; mDesiredFloor.f shall always be set to Target.<br>
+        R11.5&nbsp;&nbsp;&nbsp; mDesiredFloor.d shall always be set to Stop.<br>
+        R11.6&nbsp;&nbsp;&nbsp; Whenever any mDoorClosed [b, r] is False, then<br>
+        &nbsp;&nbsp; R11.6.1&nbsp; Target
         shall be set equal to ((f mod MaxFloors) + 1) <br>
-        &nbsp;&nbsp; 11.6.2 &nbsp; mDesiredFloor.b shall
+        &nbsp;&nbsp; R11.6.2 &nbsp; mDesiredFloor.b shall
         be set to b, where f, b is whichever mAtFloor[f, b] is True<br>
-        11.7&nbsp; If all mAtFloor[f, b] are False AND any mDoorClosed [b, r]
+        R11.7&nbsp; If all mAtFloor[f, b] are False AND any mDoorClosed [b, r]
         is False (which means doors are not
         closed between floors!); then<br>
-        &nbsp;&nbsp;&nbsp; 11.7.1&nbsp;&nbsp; Target shall be set to 1<br>
-        &nbsp;&nbsp;&nbsp; 11.7.2&nbsp;&nbsp; mDesiredFloor.b
+        &nbsp;&nbsp;&nbsp; R11.7.1&nbsp;&nbsp; Target shall be set to 1<br>
+        &nbsp;&nbsp;&nbsp; R11.7.2&nbsp;&nbsp; mDesiredFloor.b
         shall be set to None .<br>
-        11.8 &nbsp; If two mAtFloor[f, b] values are True with the same value
+        R11.8 &nbsp; If two mAtFloor[f, b] values are True with the same value
         f, then mDesiredFloor.b shall be set to Both.<br>
-        11.9 &nbsp;&nbsp; mDesiredDwell shall always be set to a constant
+        R11.9 &nbsp;&nbsp; mDesiredDwell shall always be set to a constant
         appropriate value for door open dwell. &nbsp; &nbsp;
+        <h3>Statechart</h3>
+        <div style="text-align: center;"><a href="dispatcher_state_diagram.png"><img
+            alt="dispatcher_state_diagram.png" src="dispatcher_state_diagram.png"
+            style="border: 0px solid ; width: 613px; height: 200px;"></a><br>
+        </div>
+        <table style="text-align: left; width: 800px;" border="1"
+            cellpadding="2" cellspacing="2">
+            <tbody>
+                <tr>
+                    <td style="vertical-align: top;">Transition #<br>
+                    </td>
+                    <td style="vertical-align: top;">Conditions<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">T11.1<br>
+                    </td>
+                    <td style="vertical-align: top;">all mAtFloor[f, b] == False && any mDoorClosed [b, r] == False <br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">T11.2<br>
+                    </td>
+                    <td style="vertical-align: top;">mDoorClosed [b, r] == False && mAtFloor.f == mDesiredFloor<br>
+                    </td>
+                </tr>
+            </tbody >
+        </table>
+        <h3>Requirements to Statechart Traceability</h3>
+                completed by Xianle Wang(xianlew)
+
+        <table style="text-align: left; width: 800px;" border="1"
+            cellpadding="2" cellspacing="2">
+            <tbody>
+                <tr>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;" colspan="9">Requirements<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">States<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.4<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.5<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.6.1<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.6.2<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.7.1<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.7.2<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.8<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.9<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">S11.1 MOVE<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                     <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">S11.2 EMERGENCY_MOVE<br>
+                    </td>
+                    
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                     <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">Transitions<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.4<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.5<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.6.1<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.6.2<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.7.1<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.7.2<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.8<br>
+                    </td>
+                    <td style="vertical-align: top;">R11.9<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">T11.1 <br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                     <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="vertical-align: top;">T11.2 <br>
+                    </td>
+                    
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;"><br>
+                    </td>
+                     <td style="vertical-align: top;"><br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                    <td style="vertical-align: top;">X<br>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
         <p> &nbsp;<br>
         &nbsp;<br>
         &nbsp;<br>
         &nbsp;<br>
         &nbsp; </p>
+
     </body>
 </html>
